<?xml version="1.0"?>
<package format="2">
  <name>uncalibrated_visual_servoing</name>
  <version>0.1.0</version>
  <description>The uncalibrated_visual_servoing package</description>
  <maintainer email="laurapetrich@ualberta.ca">lpetrich</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>catkin_modules</depend>
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <export>
  </export>
</package>
